<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.SignInFragment"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/imgLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/world_map"/>
            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"/>-->
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editUserName"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/editbox_outline">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="30dp"
                    android:drawableRight="@drawable/ic_user"
                    android:hint="@string/user_name"
                    android:backgroundTint="@color/control_tint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editPassword"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editUserName"
                android:layout_margin="5dp"
                app:endIconMode="password_toggle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_lock"
                    android:hint="@string/password"
                    android:backgroundTint="@color/control_tint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--<TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editPassword"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:textColor="@color/primary_sky"
                android:text="@string/forgot_password" />-->

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editPassword"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background_controls"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnSignIn"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account" />
                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="20dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/primary_sky" />
            </LinearLayout>-->
        </RelativeLayout>
    </LinearLayout>
</layout>
